--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ h1 {
     color: #ffffff;
     display: inline;
     font-size: 24px;
-    line-height: 2em;
 
 }
 
@@ -65,6 +64,16 @@ a:active {
     
 }
 
+.picture {
+    position: relative;
+}
+.content {
+    background-color: #4aaaa5;
+    color: #ffffff;
+    position: absolute;
+    text-align: center;
+}
+
 #bioimage {
     width: 150px;
     height: 175px;
@@ -108,3 +117,4 @@ a:active {
     height: 57px;
     line-height: 60px;
 }
+
